# itpm

./: CMakeLists.txt  README.md  gauss-ui.cpp  main.cpp  mvc.cpp
gauss/: CMakeLists.txt
gauss/include/gauss/: gauss.hpp
gauss/src/: gauss.cpp
gauss/tests/: gauss-tests.cpp
